# zero2prod

./: Cargo.toml
.github/workflows/: rust.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
tests/: health_check.rs
