[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Victor Pinheiro <victor.pinheiro.soft@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
